--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -10138,6 +10138,9 @@ msgstr ""
 msgid "Corpus Management|Are you sure you want to delete the corpus?"
 msgstr ""
 
+msgid "CorpusManagement|A corpus is used by fuzz testing to improve coverage. Corpus files can be manually created or auto-generated. %{linkStart}Learn more%{linkEnd}"
+msgstr ""
+
 msgid "CorpusManagement|Actions"
 msgstr ""
 
@@ -10174,6 +10177,12 @@ msgstr ""
 msgid "CorpusManagement|Latest Job:"
 msgstr ""
 
+msgid "CorpusManagement|Manage your fuzz testing corpus files"
+msgstr ""
+
+msgid "CorpusManagement|New corpus"
+msgstr ""
+
 msgid "CorpusManagement|New upload"
 msgstr ""
 
@@ -10187,9 +10196,6 @@ msgid "CorpusManagement|To use this corpus, edit the corresponding YAML file"
 msgstr ""
 
 msgid "CorpusManagement|Total Size: %{totalSize}"
-msgstr ""
-
-msgid "CorpusMnagement|New corpus"
 msgstr ""
 
 msgid "Could not add admins as members"
