Prevent creation or conversion into manual iteration cadences
We are deprecting manual iteration cadences.
No more manual cadences should be created nor
existing automatic should be converted into manual

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -22694,6 +22694,9 @@ msgstr ""
 msgid "Manual"
 msgstr ""
 
+msgid "Manual iteration cadences are deprecated. Only automatic iteration cadences are allowed."
+msgstr ""
+
 msgid "ManualOrdering|Couldn't save the order of the issues"
 msgstr ""
 
