--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -37976,6 +37976,9 @@ msgstr ""
 msgid "This deployment is not waiting for approvals."
 msgstr ""
 
+msgid "This deployment job does not run automatically and must be started manually, but you do not have access to this job's protected environment. The job can only be started by a project member allowed to deploy to the environment."
+msgstr ""
+
 msgid "This device has already been registered with us."
 msgstr ""
 
@@ -38136,6 +38139,9 @@ msgid "This job deploys to the protected environment \"%{environment}\" which re
 msgstr ""
 
 msgid "This job does not have a trace."
+msgstr ""
+
+msgid "This job does not run automatically and must be started manually, but you do not have access to it."
 msgstr ""
 
 msgid "This job has been canceled"
