Fix Epic and Label != filtered search suggestions not showing
Changelog: fixed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -25030,6 +25030,9 @@ msgstr ""
 msgid "No start date"
 msgstr ""
 
+msgid "No suggestions found"
+msgstr ""
+
 msgid "No tag selected"
 msgstr ""
 
