--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -9336,6 +9336,9 @@ msgstr ""
 msgid "Confirm new password"
 msgstr ""
 
+msgid "Confirm remove avatar"
+msgstr ""
+
 msgid "Confirm user"
 msgstr ""
 
