Graceful degradation for refs endpoint
**Problem**

We have an unhandled exception when Gitaly is not available.

**Solution**

Return 503 error with an error message.

Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -39636,6 +39636,9 @@ msgstr ""
 msgid "Unable to load file contents. Try again later."
 msgstr ""
 
+msgid "Unable to load refs"
+msgstr ""
+
 msgid "Unable to load the diff"
 msgstr ""
 
