--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -42227,6 +42227,9 @@ msgstr ""
 msgid "WorkItem|New Task"
 msgstr ""
 
+msgid "WorkItem|Please select work item type"
+msgstr ""
+
 msgid "WorkItem|Something went wrong when creating a work item. Please try again"
 msgstr ""
 
