Create the add videos to continuous onboarding experiment
- Create video_tutorials_continuous_onboarding experiment feature flag
- Publish experiment in LearnGitlabController
- Add a button top open videos in a new tab from learn_gitlab
- Track click to video in candidate flow of experiment
- Make learn_gitlab_section_card responsive
- Update snaphost & unit tests for learn_gitlab

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -41559,6 +41559,9 @@ msgstr ""
 msgid "Warning: Synchronizing LDAP removes direct members' access."
 msgstr ""
 
+msgid "Watch how"
+msgstr ""
+
 msgid "We are currently unable to fetch data for the pipeline header."
 msgstr ""
 
