--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -34987,9 +34987,6 @@ msgstr ""
 msgid "Something went wrong while updating assignees"
 msgstr ""
 
-msgid "Something went wrong while updating work item. Please try again"
-msgstr ""
-
 msgid "Something went wrong while updating your list settings"
 msgstr ""
 
@@ -42312,6 +42309,9 @@ msgid "WorkItem|Something went wrong when fetching the work item. Please try aga
 msgstr ""
 
 msgid "WorkItem|Something went wrong when fetching work item types. Please try again"
+msgstr ""
+
+msgid "WorkItem|Something went wrong while updating the work item. Please try again."
 msgstr ""
 
 msgid "WorkItem|Type"
