--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -39995,6 +39995,9 @@ msgstr ""
 msgid "Unable to find Jira project to import data from."
 msgstr ""
 
+msgid "Unable to fully load the default commit message. You can still apply this suggestion and the commit message will be correct."
+msgstr ""
+
 msgid "Unable to generate new instance ID"
 msgstr ""
 
