Updated actions menu
Updated actions menu and corresponding tests

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -7819,9 +7819,6 @@ msgstr ""
 msgid "ClusterAgents|Access tokens"
 msgstr ""
 
-msgid "ClusterAgents|Actions"
-msgstr ""
-
 msgid "ClusterAgents|Add an agent configuration file to %{linkStart}this repository%{linkEnd} and select it, or create a new one to register with GitLab:"
 msgstr ""
 
@@ -7873,22 +7870,25 @@ msgstr ""
 msgid "ClusterAgents|Certificate"
 msgstr ""
 
-msgid "ClusterAgents|Certificate (deprecated)"
+msgid "ClusterAgents|Configuration"
 msgstr ""
 
-msgid "ClusterAgents|Configuration"
+msgid "ClusterAgents|Connect a cluster"
+msgstr ""
+
+msgid "ClusterAgents|Connect a cluster (agent)"
+msgstr ""
+
+msgid "ClusterAgents|Connect a cluster (certificate) (deprecated)"
+msgstr ""
+
+msgid "ClusterAgents|Connect a cluster (deprecated)"
 msgstr ""
 
 msgid "ClusterAgents|Connect a cluster through an agent"
 msgstr ""
 
 msgid "ClusterAgents|Connect existing cluster"
-msgstr ""
-
-msgid "ClusterAgents|Connect with a certificate"
-msgstr ""
-
-msgid "ClusterAgents|Connect with an agent"
 msgstr ""
 
 msgid "ClusterAgents|Connect with the GitLab Agent"
@@ -7906,16 +7906,19 @@ msgstr ""
 msgid "ClusterAgents|Copy token"
 msgstr ""
 
-msgid "ClusterAgents|Create a new cluster"
+msgid "ClusterAgents|Create a cluster"
+msgstr ""
+
+msgid "ClusterAgents|Create a cluster (certificate) (deprecated)"
+msgstr ""
+
+msgid "ClusterAgents|Create a cluster (deprecated)"
 msgstr ""
 
 msgid "ClusterAgents|Create agent access token"
 msgstr ""
 
 msgid "ClusterAgents|Create agent: %{searchTerm}"
-msgstr ""
-
-msgid "ClusterAgents|Create and connect new cluster"
 msgstr ""
 
 msgid "ClusterAgents|Create token"
