Update mutation to create and assign security policy to a group
Changelog: changed
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -10309,7 +10309,7 @@ msgstr ""
 msgid "Could not upload your designs as one or more files uploaded are not supported."
 msgstr ""
 
-msgid "Couldn't assign policy to project"
+msgid "Couldn't assign policy to project or group"
 msgstr ""
 
 msgid "Country"
