--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -22321,6 +22321,9 @@ msgstr ""
 msgid "Legacy burndown chart"
 msgstr ""
 
+msgid "Legacy license"
+msgstr ""
+
 msgid "Less Details"
 msgstr ""
 
@@ -36490,9 +36493,6 @@ msgstr ""
 msgid "SuperSonics|Buy subscription"
 msgstr ""
 
-msgid "SuperSonics|Cloud license"
-msgstr ""
-
 msgid "SuperSonics|Cloud licensing"
 msgstr ""
 
@@ -36526,7 +36526,10 @@ msgstr ""
 msgid "SuperSonics|Maximum users"
 msgstr ""
 
-msgid "SuperSonics|Offline cloud"
+msgid "SuperSonics|Offline license"
+msgstr ""
+
+msgid "SuperSonics|Online license"
 msgstr ""
 
 msgid "SuperSonics|Paste your activation code"
