Add 598.3 documentation for browser based DAST
- Adds 598.3 check documentation
- Updates 598.2 to reflect aggregation status
- Updates index page to link to 598.3

--- a/doc/user/application_security/dast/checks/598.2.md
+++ b/doc/user/application_security/dast/checks/598.2.md
@@ -22,7 +22,7 @@ reset their passwords, always use POST requests to transmit sensitive data.
 
 | ID | Aggregated | CWE | Type | Risk |
 |:---|:--------|:--------|:--------|:--------|
-| 598.2 | false | 598 | Passive | Medium |
+| 598.2 | true | 598 | Passive | Medium |
 
 ## Links
 
