--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -24166,7 +24166,7 @@ msgstr ""
 msgid "Milestones|Ongoing Issues (open and assigned)"
 msgstr ""
 
-msgid "Milestones|Organize issues and merge requests into a cohesive group, and set an optional start and due dates. %{learn_more_link}"
+msgid "Milestones|Organize issues and merge requests into a cohesive group, and set optional start and due dates. %{learn_more_link}"
 msgstr ""
 
 msgid "Milestones|Project Milestone"
